# text-file-processor

./: CMakeLists.txt  LICENSE  README.md  inputz.txt  project_requirements.docx  tests.cpp
include/: parseargs.h  parsetext.h
src/: main.cpp  parseargs.cpp  parsetext.cpp
